--- a/dyno-api/dyno-api.csproj
+++ b/dyno-api/dyno-api.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <Import Project="../dyno.targets" />
+	
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>dyno_api</RootNamespace>
   </PropertyGroup>
 
