--- a/dyno-server/dyno-server.csproj
+++ b/dyno-server/dyno-server.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
+  <Import Project="../dyno.targets" />
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>dyno_server</RootNamespace>
   </PropertyGroup>
 
