--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,32 @@ name: Deploy to Raspberry Pi
 on:
   push:
     branches:
-      - master  # Körs endast när det pushas till main-grenen
+      - master  # Deploy on push to the main branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Steg 1: Checka ut koden från repo
-      - name: Check out the code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Steg 2: Använd SSH för att ansluta till Raspberry Pi
-      - name: Deploy to Raspberry Pi
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.SSH_HOST }}  # Din Raspberry Pi:s IP-adress
-          username: ${{ secrets.SSH_USER }}  # SSH-användarnamn
-          key: ${{ secrets.SSH_PRIVATE_KEY }}  # Den privata SSH-nyckeln
-          port: ${{ secrets.SSH_PORT }}  # (valfritt) standard är 22
-          script: |
-            cd /home/pi/apps/dyno  # Ange den korrekta sökvägen till din applikation
-            git pull origin master  # Hämta senaste koden
-            dotnet build
-            dotnet run dyno-server.csproj
+    # Install SSH agent
+    - name: Install SSH key
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    # Deploy files to Raspberry Pi
+    - name: Copy files to Raspberry Pi
+      run: |
+        scp -r ./ pi@${{ secrets.SSH_HOST }}:/home/pi/apps/dyno
+
+    # Run commands on Raspberry Pi (optional)
+    - name: Run deployment commands on Raspberry Pi
+      run: |
+        ssh pi@${{ secrets.SSH_HOST }} << 'EOF'
+          cd /home/pi/apps/dyno
+          dotnet build
+          dotnet run dyno-server.csproj
+        EOF
