--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish Project
+      run: dotnet publish --configuration Release --no-build --output ./publish
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: dyno-output  # The name of the artifact
+        path: ./publish
