--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,8 +26,12 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Publish Project
-      run: dotnet publish --configuration Release --no-build --output ./publish
+    - name: Publish All Projects
+      run: |
+        for project in $(find ./src -name "*.csproj"); do
+          echo "Publishing $project"
+          dotnet publish $project --configuration Release --output ./publish/$(basename $project)
+        done
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
