--- a/dyno-api/appsettings.json
+++ b/dyno-api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiConfiguration": {
+    "GuiHost": "https://localhost:7093",
+    "ServerHost": "https://localhost:7239/"
+  }
 }
