--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Publish All Projects
       run: |
-        for project in $(find ./src -name "*.csproj"); do
+        for project in $(find ./Src -name "*.csproj"); do
           echo "Publishing $project"
           dotnet publish $project --configuration Release --output ./publish/$(basename $project)
         done
