--- a/Src/dyno-server/dyno-server.csproj
+++ b/Src/dyno-server/dyno-server.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-  <Import Project="../dyno.targets" />
+  <Import Project="../../dyno.targets" />
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
