--- a/Src/dyno-gui/dyno-gui.csproj
+++ b/Src/dyno-gui/dyno-gui.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-  <Import Project="../dyno.targets" />
+  <Import Project="../../dyno.targets" />
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
