--- a/Src/dyno-server/dyno-server.csproj
+++ b/Src/dyno-server/dyno-server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.20" />
+    <PackageReference Include="System.Device.Gpio" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
