--- a/Src/dyno-api/dyno-api.csproj
+++ b/Src/dyno-api/dyno-api.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\UserService\Service.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\ViewModels\ViewModels.csproj" />
