lite stress med users osv men det ska ju funka

--- a/Src/dyno-server/appsettings.json
+++ b/Src/dyno-server/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppConfiguration": {
+    "ApiAddress": "https://localhost:7230/api/",
+    "ClientAddress": "https://localhost:7093",
+    "ServerUser": "marcus",
+    "ServerPassword": "marcus"
+  }
 }
