--- a/Src/dyno-api/dyno-api.csproj
+++ b/Src/dyno-api/dyno-api.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <Import Project="../../dyno.targets" />
 	
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>dyno_api</RootNamespace>
+    <UserSecretsId>5d5c7c94-7f19-486e-b2cf-2f8ebb9de92a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
