--- a/.github/workflows/master_dev-dyno-app.yml
+++ b/.github/workflows/master_dev-dyno-app.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ./Src/dyno-api/dyno-wasm.csproj --configuration Release
+        run: dotnet build ./Src/dyno-wasm/dyno-wasm.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./Src/dyno-api/dyno-wasm.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./Src/dyno-wasm/dyno-wasm.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
