fix appsettings situation

--- a/Src/dyno-api/appsettings.Development.json
+++ b/Src/dyno-api/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ApiConfiguration": {
+    "GuiHost": "https://localhost:7093",
+    "ServerHost": "https://localhost:7239/"
   }
 }
