--- a/Src/dyno-wasm/wwwroot/appsettings.Development.json
+++ b/Src/dyno-wasm/wwwroot/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppConfiguration": {
-    "ApiBaseAddress": "https://dev-dyno-api.azurewebsites.net/api/",
+    "ApiBaseAddress": "https://localhost:7230/api/",
     "HubBaseAddress": ""
   }
 }
