move hub to api seems to work now.

--- a/Src/dyno-server/appsettings.Development.json
+++ b/Src/dyno-server/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppConfiguration": {
+    "ApiAddress": "https://localhost:7230/api/",
+    "HubBaseAddress": "https://localhost:7230",
+    "ServerUser": "marcus", // todo: kv
+    "ServerPassword": "marcus"
   }
 }
