--- a/Src/dyno-server/appsettings.json
+++ b/Src/dyno-server/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "AppConfiguration": {
-    "ApiAddress": "https://localhost:7230/api/",
-    "ClientAddress": "https://localhost:7093",
+    "ApiAddress": "https://dev-dyno-api.azurewebsites.net/api/",
+    "HubBaseAddress": "https://dev-dyno-api.azurewebsites.net",
     "ServerUser": "marcus",
     "ServerPassword": "marcus"
   }
