--- a/Src/dyno-wasm/wwwroot/appsettings.Development.json
+++ b/Src/dyno-wasm/wwwroot/appsettings.Development.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "AppConfiguration": {
     "ApiBaseAddress": "https://localhost:7230/api/",
-    "HubBaseAddress": ""
+    "HubBaseAddress": "https://localhost:7230"
   }
 }
