--- a/Src/dyno-wasm/wwwroot/appsettings.json
+++ b/Src/dyno-wasm/wwwroot/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "AppConfiguration": {
     "ApiBaseAddress": "https://dev-dyno-api.azurewebsites.net/api/",
-    "HubBaseAddress": ""
+    "HubBaseAddress": "https://dev-dyno-api.azurewebsites.net"
   }
 }
