--- a/Src/dyno-api/appsettings.Development.json
+++ b/Src/dyno-api/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ApiConfiguration": {
     "GuiHost": "https://localhost:7093",
-    "ServerHost": "https://localhost:7239/"
+    "ServerHost": "https://localhost:7239/",
+    "RegisteringAvailable":  true
   }
 }
