--- a/Src/dyno-api/appsettings.json
+++ b/Src/dyno-api/appsettings.json
@@ -13,6 +13,7 @@
     //"JwtAudience": "api://4178864b-71c8-4229-bd01-38ea1f04584d",
     "VaultUrl": "https://dev-dyno-kv.vault.azure.net/",
     "TenantId": "09d4d4ca-9c96-4beb-b0d2-a12b3bdf6e57",
-    "ClientId": "4178864b-71c8-4229-bd01-38ea1f04584d"
+    "ClientId": "4178864b-71c8-4229-bd01-38ea1f04584d",
+    "RegisteringAvailable": true
   }
 }
