--- a/Src/dyno-api/appsettings.Development.json
+++ b/Src/dyno-api/appsettings.Development.json
@@ -8,6 +8,6 @@
   "ApiConfiguration": {
     "GuiHost": "https://localhost:7093",
     "ServerHost": "https://localhost:7239/",
-    "RegisteringAvailable":  false
+    "RegisteringAvailable":  true
   }
 }
