--- a/Src/dyno-api/appsettings.json
+++ b/Src/dyno-api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ApiConfiguration": {
-    "GuiHost": "https://dev-dyno-app.azurewebsites.net/",
+    "GuiHost": "https://dev-dyno-app.azurewebsites.net",
     "ServerHost": "https://localhost:7239/",
     //"JwtIssuer": "https://login.microsoftonline.com/09d4d4ca-9c96-4beb-b0d2-a12b3bdf6e57/v2.0",
     //"JwtAudience": "api://4178864b-71c8-4229-bd01-38ea1f04584d",
