--- a/Src/dyno-server/appsettings.json
+++ b/Src/dyno-server/appsettings.json
@@ -10,6 +10,9 @@
     "ApiAddress": "https://dev-dyno-api.azurewebsites.net/api/",
     "HubBaseAddress": "https://dev-dyno-api.azurewebsites.net",
     "ServerUser": "marcus",
-    "ServerPassword": "marcus"
+    "ServerPassword": "marcus",
+    "MaxHubConnectionRetries": 25,
+    "MaxHubConnectionRetryDelayInSeconds": 30,
+    "MaxHubConnectionRetryDurationInMinutes":  5
   }
 }
