Retry logic for server (#35)
* remove @

* retry logic for signalR in server

* remove attempt total minutes timer. number of attempts will do.

--- a/Src/dyno-server/appsettings.json
+++ b/Src/dyno-server/appsettings.json
@@ -10,6 +10,8 @@
     "ApiAddress": "https://dev-dyno-api.azurewebsites.net/api/",
     "HubBaseAddress": "https://dev-dyno-api.azurewebsites.net",
     "ServerUser": "marcus",
-    "ServerPassword": "marcus"
+    "ServerPassword": "marcus",
+    "MaxHubConnectionRetries": 25,
+    "MaxHubConnectionRetryDelayInSeconds": 30
   }
 }
