clear from appsettings

--- a/Src/dyno-server/appsettings.Development.json
+++ b/Src/dyno-server/appsettings.Development.json
@@ -7,8 +7,6 @@
   },
   "AppConfiguration": {
     "ApiAddress": "https://localhost:7230/api/",
-    "HubBaseAddress": "https://localhost:7230",
-    "ServerUser": "marcus", // todo: kv
-    "ServerPassword": "marcus"
+    "HubBaseAddress": "https://localhost:7230"
   }
 }
